@@ -67,7 +67,6 @@ static void insert(const LIBCXX_NAMESPACE::w::container &c,
 			      "dolore magna\n"
 			      "aliqua")->show();
 
-	LIBCXX_NAMESPACE::w::pane_lock lock{lm};
 	LIBCXX_NAMESPACE::w::label l=lm->get(0);
 }
 
